Added num calls threshold to force account change

--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-vk-api = "*"
-pydantic = "*"
-python-dotenv = "*"
+vk-common = {editable = true, git = "ssh://git@github.com/dbradul/vk_common.git"}
 openpyxl = "*"
 
 [dev-packages]
